Applied new interface from April 29

--- a/interface/static/tpl/person-thumb.html
+++ b/interface/static/tpl/person-thumb.html
@@ -1,1 +1,5 @@
-<div id="person_thumb_NA" style="background-image:url(&quot;static/img/noperson.jpg&quot;)" class="person-thumb"><p><a href="/person/NA" class="name"></a></p></div>
+
+<div id="person_thumb_NA" class="person-thumb">
+  <div class="photo"><img src="static/img/noperson.jpg" class="img-responsive img-circle"/></div>
+  <p><a href="/person/NA" class="name"></a></p>
+</div>
