--- a/interface/static/tpl/person-thumb.html
+++ b/interface/static/tpl/person-thumb.html
@@ -1,5 +1,4 @@
-
-<div id="person_thumb_NA" class="person-thumb">
-  <div class="photo"><img src="static/img/noperson.jpg" class="img-responsive img-circle"/></div>
-  <p><a href="/person/NA" class="name"></a></p>
+<div data-mi-id="id" data-mi-val="NA" class="person-thumb">
+  <div class="photo"><img data-mi-atsrc="photo" data-mi-default="static/img/noperson.jpg" src="static/img/noperson.jpg" class="img-responsive img-circle"/></div>
+  <p><a href="/persons/NA" data-mi-name="name" data-mi-athref="id" class="name"></a></p>
 </div>
