--- a/interface/jade/head.html
+++ b/interface/jade/head.html
@@ -1,16 +1,2 @@
-<!DOCTYPE html>
-<html lang="ru"></html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ВсеВидео</title>
-  <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/static/css/bootstrap-theme.css" rel="stylesheet">
-  <link href="/static/css/custom.css" rel="stylesheet">
-  <link href="/static/css/rateit.css" rel="stylesheet">
-  <!--if lt IE 9
-  script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
-  script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
-  -->
-</head>
+<!DOCTYPE html><html lang="ru"></html><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><title>ВсеВидео &mdash; undefined</title><link href="static/css/bootstrap.min.css" rel="stylesheet"><link href="static/css/bootstrap-theme.css" rel="stylesheet"><link href="static/css/custom.css" rel="stylesheet"><link href="static/css/rateit.css" rel="stylesheet"><link href="static/css/uniform.default.min.css" rel="stylesheet"><!--if lt IE 9script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
+script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')--></head>
