--- a/interface/jade/header.html
+++ b/interface/jade/header.html
@@ -1,135 +1,1 @@
-
-<div id="log"></div>
-<div id="reg-enter" tabindex="-1" role="dialog" aria-hidden="true" class="modal fade">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <button type="button" data-dismiss="modal" aria-hidden="true" class="close modal-close">×</button>
-      <div class="wrap-popup-content">
-        <ul class="nav nav-tabs popup-tabs-a">
-          <li class="active"><a href="#reg" data-toggle="tab"><span>Регистрация</span></a></li>
-          <li><a href="#enter" data-toggle="tab"><span>Вход на сайт</span></a></li>
-        </ul>
-        <div class="tab-content popup-content">
-          <div id="reg" class="tab-pane active">
-            <div class="wrap-popup-content">
-              <h3>C помощью почты</h3>
-              <form role="form" class="form-horizontal form-popup">
-                <div class="form-group">
-                  <label for="inputEmail" class="col-sm-3 control-label">E-mail</label>
-                  <div class="col-sm-9">
-                    <input id="inputEmail" type="email" class="form-control"/>
-                  </div>
-                </div>
-                <div class="form-group has-error">
-                  <label for="inputPassword" class="col-sm-3 control-label">Пароль</label>
-                  <div class="col-sm-9">
-                    <input id="inputPassword" type="password" class="form-control"/>
-                    <p>Количество символов должно быть не менее 8-ми.</p>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputPasswordRe" class="col-sm-3 control-label">Повторите пароль</label>
-                  <div class="col-sm-9">
-                    <input id="inputPasswordRe" type="password" class="form-control"/>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="col-sm-offset-3 col-sm-10">
-                    <button type="submit" class="btn btn-yellow1">Зарегистрироваться</button>
-                  </div>
-                </div>
-              </form>
-              <h3>C помощью социальных сетей</h3>
-              <ul class="soc-hor">
-                <li><a href="#" title=""><img src="images/i-vk-b.png" alt=""/></a></li>
-                <li><a href="#" title=""><img src="images/i-fb-b.png" alt=""/></a></li>
-                <li><a href="#" title=""><img src="images/i-tw-b.png" alt=""/></a></li>
-                <li><a href="#" title=""><img src="images/i-go-b.png" alt=""/></a></li>
-              </ul>
-            </div>
-            <!--.wrap-popup-content
-            -->
-          </div>
-          <div id="enter" class="tab-pane">
-            <div class="wrap-popup-content">
-              <h3>C помощью почты</h3>
-              <form role="form" class="form-horizontal form-popup">
-                <div class="form-group">
-                  <label for="inputEmail1" class="col-sm-3 control-label">E-mail</label>
-                  <div class="col-sm-9">
-                    <input id="inputEmail1" type="email" class="form-control"/>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputPassword1" class="col-sm-3 control-label">Пароль</label>
-                  <div class="col-sm-9">
-                    <input id="inputPassword1" type="password" class="form-control"/>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="col-sm-offset-3 col-sm-10">
-                    <button type="submit" class="btn btn-yellow1">Войти</button>
-                  </div>
-                </div>
-              </form>
-              <h3>C помощью социальных сетей</h3>
-              <ul class="soc-hor">
-                <li><a href="#" title=""><img src="images/i-vk-b.png" alt=""/></a></li>
-                <li><a href="#" title=""><img src="images/i-fb-b.png" alt=""/></a></li>
-                <li><a href="#" title=""><img src="images/i-tw-b.png" alt=""/></a></li>
-                <li><a href="#" title=""><img src="images/i-go-b.png" alt=""/></a></li>
-              </ul>
-            </div>
-            <!--.wrap-popup-content
-            -->
-          </div>
-        </div>
-      </div>
-      <!--.wrap-popup-content
-      -->
-    </div>
-  </div>
-  <div class="wrap-page">
-    <header role="banner">
-      <div class="top-header">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3 user-block">
-              <ul>
-                <li><a href="#" data-toggle="modal" data-target="#reg-enter" title="" class="sprite sprite-i-enter"><span>Вход</span></a></li>
-                <li><a href="#" data-toggle="modal" data-target="#reg-enter" title="" class="sprite sprite-i-reg"><span>Регистрация</span></a></li>
-              </ul>
-            </div>
-            <div class="col-md-3 logo-block"><a href="/" title="Все Видео"><img src="images/logo-header.png" alt="" class="logo"/></a></div>
-            <div class="col-md-6 search-block">
-              <div class="input-group">
-                <input type="text" placeholder="Поиск по сайту" class="form-control"/><span class="input-group-btn">
-                  <button type="submit" class="btn btn-primary">Найти</button></span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="bottom-header">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 col-sm-8">
-              <ul class="menu-header">
-                <li><a href="/" title=""><i class="sprite sprite-i-film"></i><br/>Фильмы</a></li>
-                <li><a href="#" title=""><i class="sprite sprite-i-ser"></i><br/>Сериалы</a></li>
-                <li><a href="#" title=""><i class="sprite sprite-i-tv"></i><br/>ТВ-программа</a></li>
-                <li><a href="#" title=""><i class="sprite sprite-i-online"></i><br/>Онлайн</a></li>
-              </ul>
-            </div>
-            <div class="col-md-4 col-sm-4">
-              <ul class="menu-header">
-                <li><a href="/playlist" title=""><i class="sprite sprite-i-play"></i><br/>Плейлист</a></li>
-                <li><a href="/feed" title=""><i class="sprite sprite-i-tape"></i><br/>Лента</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-  </div>
-</div>
+<div id="log"></div><div class="wrap-page"><header role="banner"><div class="top-header"><div class="container"><div class="row"><div class="col-md-3 user-block"><ul><li><a id="login_btn" href="/login/" title="" class="sprite sprite-i-enter"><span>Вход</span></a></li><li><a id="reg_btn" href="/register/" title="" class="sprite sprite-i-reg"><span>Регистрация</span></a></li></ul></div><div class="col-md-3 logo-block"><a href="/" title="Все Видео"><img src="static/img/logo-header.png" alt="" class="logo"/></a></div><div class="col-md-6 search-block"><form action="/search" method="get" class="input-group"><input type="text" placeholder="Поиск по сайту" name="text" value="" class="form-control"/><span class="input-group-btn"><button type="submit" class="btn btn-primary">Найти</button></span></form></div></div></div></div><div class="bottom-header"><div class="container"><div class="row"><div class="col-md-8 col-sm-8"><ul class="menu-header"><li><a href="/" title=""><i class="sprite sprite-i-film"></i><br/>Фильмы</a></li><li><a href="#" title=""><i class="sprite sprite-i-ser"></i><br/>Сериалы</a></li><li><a href="#" title=""><i class="sprite sprite-i-tv"></i><br/>ТВ-программа</a></li><li><a href="#" title=""><i class="sprite sprite-i-online"></i><br/>Онлайн</a></li></ul></div><div class="col-md-4 col-sm-4"><ul class="menu-header"><li><a href="/playlist" title="" data-toggle="modal" data-target="#reg-enter" data-remote="false"><i class="sprite sprite-i-play"></i><br/>Плейлист</a></li><li><a href="/feed" title="" data-toggle="modal" data-target="#reg-enter" data-remote="false"><i class="sprite sprite-i-tape"></i><br/>Лента</a></li></ul></div></div></div></div></header></div>
