--- a/interface/static/player.html
+++ b/interface/static/player.html
@@ -1,73 +1,58 @@
-<!DOCTYPE html5>
-<html lang="ru">
-  <head>
-    <title>Плеер ВсеВидео</title>
-    <meta charset="utf-8"/>
-    <style>
-      html, body {margin: 0; overflow: hidden}
-      #player {width: 100%; height: 100%}
-      .inner {position: absolute; top: 50%; height: 6em;margin-top: -3em; text-align: center; width: 90%; color: white; font-size: 24px}
-      .inner a {color: white; font-weight: bold}
-    </style>
-  </head>
-  <body>
-    <div id="player"></div>
-    <script>
-      var
-          query_arr = (window.location + "").split("?"),
-          params, vals = {}, html = false, location_names;
-      if (query_arr.length > 1) {
-          params = query_arr[1].split("&");
-          for (var i = 0; i < params.length; i++) {
-              param_arr = params[i].split("=")
-              vals[param_arr[0]] = decodeURI(param_arr[1])
-          }
-      }
-      location_names = {"ivi": "IVI.ru", "nowru": "Now.ru", "megogo": "Megogo", "tvigle": "TVigle", "zoomby": "Zoomby.ru", playfamily: "PlayFamily.ru", "olltv": "Oll.tv", amediateka: "Amediateka", molodejj: "Molodejj.tv", streamru: "Stream.ru", tvzavr: "TVzavr.ru", viaplay: "Viaplay.ru", zabava: "Zabava.ru", playgoogle: "Play Google", itunes: "Apple Itunes", ayyo: "Ayyo.ru", mosfilm: "Cinema.mosfilm.ru", "default": "Онлайн-кинотеатре"}
-      if (vals.price && vals.view) {
-          html = '<div class="inner">Чтобы посмотреть фильм за ' + Math.floor(vals.price) + ' руб. на ' + (location_names[vals.type] || location_names["default"]) + '<br>вам необходимо перейти по <a href="' + vals.view + '" target="_blank" ref="nofollow">ссылке</a></div>'
-      } else if (vals.type && (vals.value || vals.view)) {
-          html = false;
-          value = vals.value || false
-          if (vals.type == "ivi") {
-              if (value == false) {
-                  value = vals.view.substr(24)
-                  value = value.substr(0, value.indexOf("#"))
-              }
-              html = '<iframe src="http://www.ivi.ru/player/?videoid=' + value + '&amp;subsite=138&amp;enableseries=0&amp;autostart=0" width="100%" height="100%" frameborder="0" allowfullscreen=""></iframe>'
-          } else if (vals.type == "nowru") {
-              if (value == false) {
-                  arr = vals.view.split("/")
-                  value = arr[arr.length - 1]
-              }
-              html = '<iframe name="now1023318" src="http://www.now.ru/embed/frame/' + value + '" scrolling="no" frameborder="no" height="100%" width="100%" allowfullscreen></iframe>'
-          } else if (vals.type == "tvigle") {
-                  if (value == false) {
-                      arr = vals.view.split("=")
-                      value = arr[arr.length - 1]
-                  }
-          //- html = '<object id="v' + value + '_1"  name="vjs' + value + '_1" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" width="100%" height="100%" ><param name="FlashVars" value="vote=0&srv=pub.tvigle.ru&prt=82e31fc37d1aa503682cc19dcdd6557c&id=' + value + '&w=720&h=405&type=&dopparam=&modes=1&autoplay=1&enablejsapi=1" /><param name="allowFullScreen" value="true" /><param name="movie" value="http://pub.tvigle.ru/swf/tvigle_single_v2.swf" /><param name="quality" value="high" /><param name="bgcolor" value="#000000" /><param name="allowscriptaccess" value="always" /><embed id="vjs' + value + '_1" src="http://pub.tvigle.ru/swf/tvigle_single_v2.swf" allowscriptaccess="always" quality="high" width="100%" height="100%" bgcolor="#000000" allowfullscreen="true" flashvars="vote=0&srv=pub.tvigle.ru&prt=82e31fc37d1aa503682cc19dcdd6557c&id=' +  value + '&w=720&h=405&type=&dopparam=&modes=1&autoplay=1&enablejsapi=1" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" ></embed></object>'
-              html = '<object codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" width="100%" height="100%"><param name="FlashVars" value="vote=0&amp;srv=pub.tvigle.ru&amp;prt=e0d0f9ff7176e333398f17de0dbdabb2&amp;id=' + value + '&amp;w=640&amp;h=400&amp;type=&amp;dopparam=&amp;modes=1&amp;autoplay=1"><param name="allowFullScreen" value="true"><param name="movie" value="http://pub.tvigle.ru/swf/tvigle_single_v2.swf"><param name="quality" value="high"><param name="bgcolor" value="#000000"><param name="allowscriptaccess" value="always"><embed src="http://pub.tvigle.ru/swf/tvigle_single_v2.swf" allowscriptaccess="always" quality="high" width="100%" height="100%" bgcolor="#000000" allowfullscreen="true" flashvars="vote=0&amp;srv=pub.tvigle.ru&amp;prt=e0d0f9ff7176e333398f17de0dbdabb2&amp;id=' + value + '&amp;w=640&amp;h=400&amp;type=&amp;dopparam=&amp;modes=1&amp;autoplay=1" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer"></object>'
-              //- html = '<object id="v1281374" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"  width="640" height="400" align="middle"><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><param name="movie" value="http://pub.tvigle.ru/swf/tvigle_single_v2.swf"></param><param name="FlashVars" value="srv=pub.tvigle.ru&prt=e0d0f9ff7176e333398f17de0dbdabb2&id='+ value +' + &obj=' + value + '&type=&dopparam=&modes=1&vote=0&frame=0&NSAD=1" /><embed src="http://pub.tvigle.ru/swf/tvigle_single_v2.swf" flashvars="srv=pub.tvigle.ru&prt=e0d0f9ff7176e333398f17de0dbdabb2&id=' + value + '&obj=' +value + '&type=&dopparam=&modes=1&vote=0&frame=0&NSAD=1" width="640" height="400"  allowfullscreen="true" allowscriptaccess="always" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" /></object>'
-              //- html = '<object type="application/x-shockwave-flash" data="http://tvigle.ru/swf/tvigle_v12.swf?ver=3.597999999999975" width="100%" height="100%" id="plr" style="visibility: visible; width: 100%; height: 100%;"><param name="allowScriptAccess" value="always"><param name="bgcolor" value="#000000"><param name="quality" value="high"><param name="scale" value="noscale"><param name="allowFullScreen" value="true"><param name="wmode" value="opaque"><param name="flashvars" value="ref=1&amp;obj=' + value + '&amp;cnl=692685&amp;sid_name=&amp;user_sid=&amp;own=0&amp;w=1080&amp;h=608&amp;ap=1&amp;afbr=1&amp;region=RU&amp;skin=&amp;d=tvigle.ru"></object>'
-              //- html = '<object type="application/x-shockwave-flash" data="http://tvigle.ru/swf/tvigle_v12.swf?ver=3.597999999999975" width="720" height="405" id="plr" style="visibility: visible;"><param name="allowScriptAccess" value="always"><param name="bgcolor" value="#000000"><param name="quality" value="high"><param name="scale" value="noscale"><param name="allowFullScreen" value="true"><param name="wmode" value="transparent"><param name="flashvars" value="ref=1&amp;obj=510776&amp;cnl=1882&amp;sid_name=&amp;user_sid=&amp;own=0&amp;w=720&amp;h=405&amp;ap=1&amp;afbr=1&amp;vi_cat=&amp;region=RU&amp;skin=&amp;d=tvigle.ru"></object>'
-          } else if (vals.type == "zoomby") {
-              html = '<iframe src="http://www.zoomby.ru/v/' + value + '" width="100%" height="100%" frameborder="0"></iframe>'
-          } else if (vals.type == "meogogo") {
-              html = '<iframe width="100%" height="100%" src="http://megogo.net/e/' + value + '" frameborder="0" allowfullscreen></iframe>'
-          } else if (vals.type == "molodejj") {
-              html = '<iframe width="100%" height="100%" src="http://player.molodejj.tv/player_mjj.swf?pl=544&amp;vid=' + value + '&amp;site=vkontakte_embed&amp;type=video&amp;channel=3" frameborder="0"></iframe>'
-          } else if (vals.type == "tvzavr") {
-              html = '<iframe width="100%" height="100%" src="http://www.tvzavr.ru/js/v5/tvzavrplayer2.swf?playlist=' + value + '&autoplay=1" frameborder="0"></iframe>';
-          } else if (vals.type == "mosfilm") {
-              html = '<iframe width="100%" height="100%" src="//www.youtube.com/embed/' + value + '" frameborder="0" allowfullscreen></iframe>'
-          } else if (vals.type == "playfamily") {
-              html = '<iframe width="100%" height="100%" id="playlite-frame" class="playlite-object" frameborder="0" scrolling="no" src=' + value + '></iframe>'
-          }
-      }
-      if (!html)
-          html = '<div class="inner">Произошла ошибка.</div>';
-      document.getElementById("player").innerHTML = html
-    </script>
-  </body>
-</html>
+<!DOCTYPE html5><html><head><title>Плеер ВсеВидео</title><meta charset="utf-8"/><style>html, body {margin: 0; overflow: hidden}
+#player {width: 100%; height: 100%}
+.inner {position: absolute; top: 50%; height: 6em;margin-top: -3em; text-align: center; width: 90%; color: white; font-size: 24px}
+.inner a {color: white; font-weight: bold}</style></head><body><div id="player"></div><script>var
+    query_arr = (window.location + "").split("?"),
+    params, vals = {}, html = false, location_names;
+if (query_arr.length > 1) {
+    params = query_arr[1].split("&");
+    for (var i = 0; i < params.length; i++) {
+        param_arr = params[i].split("=")
+        vals[param_arr[0]] = decodeURI(param_arr[1])
+    }
+}
+location_names = {"ivi": "IVI.ru", "nowru": "Now.ru", "megogo": "Megogo", "tvigle": "TVigle", "zoomby": "Zoomby.ru", playfamily: "PlayFamily.ru", "olltv": "Oll.tv", amediateka: "Amediateka", molodejj: "Molodejj.tv", streamru: "Stream.ru", tvzavr: "TVzavr.ru", viaplay: "Viaplay.ru", zabava: "Zabava.ru", playgoogle: "Play Google", itunes: "Apple Itunes", ayyo: "Ayyo.ru", mosfilm: "Cinema.mosfilm.ru", "default": "Онлайн-кинотеатре"}
+if (vals.price && vals.view) {
+    html = '<div class="inner">Чтобы посмотреть фильм за ' + Math.floor(vals.price) + ' руб. на ' + (location_names[vals.type] || location_names["default"]) + '<br>вам необходимо перейти по <a href="' + vals.view + '" target="_blank" ref="nofollow">ссылке</a></div>'
+} else if (vals.type && (vals.value || vals.view)) {
+    html = false;
+    value = vals.value || false
+    if (vals.type == "ivi") {
+        if (value == false) {
+            value = vals.view.substr(24)
+            value = value.substr(0, value.indexOf("#"))
+        }
+        html = '<iframe src="http://www.ivi.ru/player/?videoid=' + value + '&amp;subsite=138&amp;enableseries=0&amp;autostart=0" width="100%" height="100%" frameborder="0" allowfullscreen=""></iframe>'
+    } else if (vals.type == "nowru") {
+        if (value == false) {
+            arr = vals.view.split("/")
+            value = arr[arr.length - 1]
+        }
+        html = '<iframe name="now1023318" src="http://www.now.ru/embed/frame/' + value + '" scrolling="no" frameborder="no" height="100%" width="100%" allowfullscreen></iframe>'
+    } else if (vals.type == "tvigle") {
+            if (value == false) {
+                arr = vals.view.split("=")
+                value = arr[arr.length - 1]
+            }
+    //- html = '<object id="v' + value + '_1"  name="vjs' + value + '_1" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" width="100%" height="100%" ><param name="FlashVars" value="vote=0&srv=pub.tvigle.ru&prt=82e31fc37d1aa503682cc19dcdd6557c&id=' + value + '&w=720&h=405&type=&dopparam=&modes=1&autoplay=1&enablejsapi=1" /><param name="allowFullScreen" value="true" /><param name="movie" value="http://pub.tvigle.ru/swf/tvigle_single_v2.swf" /><param name="quality" value="high" /><param name="bgcolor" value="#000000" /><param name="allowscriptaccess" value="always" /><embed id="vjs' + value + '_1" src="http://pub.tvigle.ru/swf/tvigle_single_v2.swf" allowscriptaccess="always" quality="high" width="100%" height="100%" bgcolor="#000000" allowfullscreen="true" flashvars="vote=0&srv=pub.tvigle.ru&prt=82e31fc37d1aa503682cc19dcdd6557c&id=' +  value + '&w=720&h=405&type=&dopparam=&modes=1&autoplay=1&enablejsapi=1" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" ></embed></object>'
+        html = '<object codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" width="100%" height="100%"><param name="FlashVars" value="vote=0&amp;srv=pub.tvigle.ru&amp;prt=e0d0f9ff7176e333398f17de0dbdabb2&amp;id=' + value + '&amp;w=640&amp;h=400&amp;type=&amp;dopparam=&amp;modes=1&amp;autoplay=1"><param name="allowFullScreen" value="true"><param name="movie" value="http://pub.tvigle.ru/swf/tvigle_single_v2.swf"><param name="quality" value="high"><param name="bgcolor" value="#000000"><param name="allowscriptaccess" value="always"><embed src="http://pub.tvigle.ru/swf/tvigle_single_v2.swf" allowscriptaccess="always" quality="high" width="100%" height="100%" bgcolor="#000000" allowfullscreen="true" flashvars="vote=0&amp;srv=pub.tvigle.ru&amp;prt=e0d0f9ff7176e333398f17de0dbdabb2&amp;id=' + value + '&amp;w=640&amp;h=400&amp;type=&amp;dopparam=&amp;modes=1&amp;autoplay=1" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer"></object>'
+        //- html = '<object id="v1281374" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"  width="640" height="400" align="middle"><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><param name="movie" value="http://pub.tvigle.ru/swf/tvigle_single_v2.swf"></param><param name="FlashVars" value="srv=pub.tvigle.ru&prt=e0d0f9ff7176e333398f17de0dbdabb2&id='+ value +' + &obj=' + value + '&type=&dopparam=&modes=1&vote=0&frame=0&NSAD=1" /><embed src="http://pub.tvigle.ru/swf/tvigle_single_v2.swf" flashvars="srv=pub.tvigle.ru&prt=e0d0f9ff7176e333398f17de0dbdabb2&id=' + value + '&obj=' +value + '&type=&dopparam=&modes=1&vote=0&frame=0&NSAD=1" width="640" height="400"  allowfullscreen="true" allowscriptaccess="always" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" /></object>'
+        //- html = '<object type="application/x-shockwave-flash" data="http://tvigle.ru/swf/tvigle_v12.swf?ver=3.597999999999975" width="100%" height="100%" id="plr" style="visibility: visible; width: 100%; height: 100%;"><param name="allowScriptAccess" value="always"><param name="bgcolor" value="#000000"><param name="quality" value="high"><param name="scale" value="noscale"><param name="allowFullScreen" value="true"><param name="wmode" value="opaque"><param name="flashvars" value="ref=1&amp;obj=' + value + '&amp;cnl=692685&amp;sid_name=&amp;user_sid=&amp;own=0&amp;w=1080&amp;h=608&amp;ap=1&amp;afbr=1&amp;region=RU&amp;skin=&amp;d=tvigle.ru"></object>'
+        //- html = '<object type="application/x-shockwave-flash" data="http://tvigle.ru/swf/tvigle_v12.swf?ver=3.597999999999975" width="720" height="405" id="plr" style="visibility: visible;"><param name="allowScriptAccess" value="always"><param name="bgcolor" value="#000000"><param name="quality" value="high"><param name="scale" value="noscale"><param name="allowFullScreen" value="true"><param name="wmode" value="transparent"><param name="flashvars" value="ref=1&amp;obj=510776&amp;cnl=1882&amp;sid_name=&amp;user_sid=&amp;own=0&amp;w=720&amp;h=405&amp;ap=1&amp;afbr=1&amp;vi_cat=&amp;region=RU&amp;skin=&amp;d=tvigle.ru"></object>'
+    } else if (vals.type == "zoomby") {
+        html = '<iframe src="http://www.zoomby.ru/v/' + value + '" width="100%" height="100%" frameborder="0"></iframe>'
+    } else if (vals.type == "meogogo") {
+        html = '<iframe width="100%" height="100%" src="http://megogo.net/e/' + value + '" frameborder="0" allowfullscreen></iframe>'
+    } else if (vals.type == "molodejj") {
+        html = '<iframe width="100%" height="100%" src="http://player.molodejj.tv/player_mjj.swf?pl=544&amp;vid=' + value + '&amp;site=vkontakte_embed&amp;type=video&amp;channel=3" frameborder="0"></iframe>'
+    } else if (vals.type == "tvzavr") {
+        html = '<iframe width="100%" height="100%" src="http://www.tvzavr.ru/js/v5/tvzavrplayer2.swf?playlist=' + value + '&autoplay=1" frameborder="0"></iframe>';
+    } else if (vals.type == "mosfilm") {
+        html = '<iframe width="100%" height="100%" src="//www.youtube.com/embed/' + value + '" frameborder="0" allowfullscreen></iframe>'
+    } else if (vals.type == "playfamily") {
+        html = '<iframe width="100%" height="100%" id="playlite-frame" class="playlite-object" frameborder="0" scrolling="no" src="http://playlite.ru/widgets/widget/' + value + '/PARTNER661">'
+    }
+}
+if (!html)
+    html = '<div class="inner">Произошла ошибка.</div>';
+document.getElementById("player").innerHTML = html</script></body></html>
