--- a/interface/static/tpl/feed-thumb.html
+++ b/interface/static/tpl/feed-thumb.html
@@ -2,7 +2,7 @@
   <div class="tape-item cf tape-thumb tape-film-c">
     <div class="row">
       <div class="col-md-1 col-sm-2 col-xs-2">
-        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="user.id"><img src="/vsevi.com/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/vsevi.com/static/img/noavatar.png" class="img-circle"/></a></div>
+        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="user.id"><img src="/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/static/img/noavatar.png" class="img-circle"/></a></div>
       </div>
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
@@ -25,7 +25,7 @@
   <div class="tape-item cf tape-thumb tape-film-r">
     <div class="row">
       <div class="col-md-1 col-sm-2 col-xs-2">
-        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="user.id"><img src="/vsevi.com/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/vsevi.com/static/img/noavatar.png" class="img-circle"/></a></div>
+        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="user.id"><img src="/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/static/img/noavatar.png" class="img-circle"/></a></div>
       </div>
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
@@ -50,7 +50,7 @@
   <div class="tape-item cf tape-thumb tape-pers-s">
     <div class="row">
       <div class="col-md-1 col-sm-2 col-xs-2">
-        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="user.id"><img src="/vsevi.com/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/vsevi.com/static/img/noavatar.png" class="img-circle"/></a></div>
+        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="user.id"><img src="/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/static/img/noavatar.png" class="img-circle"/></a></div>
       </div>
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="content-item-tape">
-          <div class="actor"><a title="" data-mi-athref="object.id"><img src="/vsevi.com/static/img/nophoto.png" alt="" data-mi-atsrc="object.photo" class="img-circle"/><span data-mi-name="object.name"></span></a></div>
+          <div class="actor"><a title="" data-mi-athref="object.id"><img src="/static/img/nophoto.png" alt="" data-mi-atsrc="object.photo" class="img-circle"/><span data-mi-name="object.name"></span></a></div>
         </div>
       </div>
     </div>
@@ -73,7 +73,7 @@
   <div class="tape-item cf tape-thumb tape-film-s">
     <div class="row">
       <div class="col-md-1 col-sm-2 col-xs-2">
-        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="user.id"><img src="/vsevi.com/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/vsevi.com/static/img/noavatar.png" class="img-circle"/></a></div>
+        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="user.id"><img src="/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/static/img/noavatar.png" class="img-circle"/></a></div>
       </div>
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="content-item-tape">
-          <div class="short-text-tape1 cf"><a title="" data-mi-athref="object.id"><img src="/vsevi.com/static/img/noposter.png" alt="" data-mi-atsrc="object.poster" data-mi-default="/vsevi.com/static/img/noposter.png"/></a>
+          <div class="short-text-tape1 cf"><a title="" data-mi-athref="object.id"><img src="/static/img/noposter.png" alt="" data-mi-atsrc="object.poster" data-mi-default="/static/img/noposter.png"/></a>
             <h4><a title="" data-mi-athref="object.id" data-mi-name="object.name"></a>
             </h4>
             <p data-mi-name="object.description"></p>
@@ -100,7 +100,7 @@
   <div class="tape-item cf tape-thumb tape-user-f">
     <div class="row">
       <div class="col-md-1 col-sm-2 col-xs-2">
-        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="user.id"><img src="/vsevi.com/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/vsevi.com/static/img/noavatar.png" class="img-circle"/></a></div>
+        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="user.id"><img src="/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/static/img/noavatar.png" class="img-circle"/></a></div>
       </div>
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
@@ -112,7 +112,7 @@
           </div>
         </div>
         <div class="content-item-tape">
-          <div class="actor"><a href="/users/undefined/" title=""><img src="/vsevi.com/static/img/noavatar.png" alt="" data-mi-atsrc="object.avatar" data-mi-default="/vsevi.com/static/img/noavatar.png" class="img-circle"/><span data-mi-name="object.name"></span></a></div>
+          <div class="actor"><a href="/users/undefined/" title=""><img src="/static/img/noavatar.png" alt="" data-mi-atsrc="object.avatar" data-mi-default="/static/img/noavatar.png" class="img-circle"/><span data-mi-name="object.name"></span></a></div>
         </div>
       </div>
     </div>
@@ -123,7 +123,7 @@
   <div class="tape-item cf tape-thumb tape-film-nw">
     <div class="row">
       <div class="col-md-1 col-sm-2 col-xs-2">
-        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="user.id"><img src="/vsevi.com/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/vsevi.com/static/img/noavatar.png" class="img-circle"/></a></div>
+        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="user.id"><img src="/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/static/img/noavatar.png" class="img-circle"/></a></div>
       </div>
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
@@ -135,7 +135,7 @@
           </div>
         </div>
         <div class="content-item-tape">
-          <div class="short-text-tape1 cf"><a title="" data-mi-athref="object.id"><img src="/vsevi.com/static/img/noposter.png" alt="" data-mi-atsrc="object.poster" data-mi-default="/vsevi.com/static/img/noposter.png"/></a>
+          <div class="short-text-tape1 cf"><a title="" data-mi-athref="object.id"><img src="/static/img/noposter.png" alt="" data-mi-atsrc="object.poster" data-mi-default="/static/img/noposter.png"/></a>
             <h4><a title="" data-mi-athref="object.id" data-mi-name="object.name"></a>
               <!--+ " (" + item.object.releasedate.substr(0,4) + ")"-->
             </h4>
@@ -148,7 +148,7 @@
   <div class="tape-item cf tape-thumb tape-user-a">
     <div class="row">
       <div class="col-md-1 col-sm-2 col-xs-2">
-        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="object.id"><img src="/vsevi.com/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/vsevi.com/static/img/noavatar.png" class="img-circle"/></a></div>
+        <div class="tape-img"><a href="/users/undefined/" title="" data-mi-athref="object.id"><img src="/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/static/img/noavatar.png" class="img-circle"/></a></div>
       </div>
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
