--- a/interface/static/tpl/person-thumb.html
+++ b/interface/static/tpl/person-thumb.html
@@ -1,3 +1,3 @@
 <li data-mi-id="id" data-mi-val="NA">
-  <div class="actor"><a href="/persons/NA/" title="" data-mi-athref="id"><img src="#" alt="" data-mi-atsrc="photo" data-mi-default="/vsevi.com/static/img/nophoto.png" class="img-circle"/><span data-mi-name="name"></span></a></div>
+  <div class="actor"><a href="/persons/NA/" title="" data-mi-athref="id"><img src="#" alt="" data-mi-atsrc="photo" data-mi-default="/static/img/nophoto.png" class="img-circle"/><span data-mi-name="name"></span></a></div>
 </li>
