--- a/interface/static/tpl/film-thumb.html
+++ b/interface/static/tpl/film-thumb.html
@@ -1,4 +1,4 @@
-<div data-mi-id="id" data-mi-val="NA" class="col-md-3 col-sm-4 col-xs-6 film-thumb"><a href="/films/NA/" title="" data-mi-athref="id" class="poster-place"><img src="/vsevi.com/static/img/noposter.png" data-mi-atsrc="poster" data-mi-default="/vsevi.com/static/img/noposter.png" data-mi-id="poster" title=" " alt=" " data-mi-attitle="title_alt" data-mi-atalt="title_alt" class="img-poster"/></a><img src="/vsevi.com/static/img/shd-small.png" alt=""/>
+<div data-mi-id="id" data-mi-val="NA" class="col-md-3 col-sm-4 col-xs-6 film-thumb"><a href="/films/NA/" title="" data-mi-athref="id" class="poster-place"><img src="/static/img/noposter.png" data-mi-atsrc="poster" data-mi-default="/static/img/noposter.png" data-mi-id="poster" title=" " alt=" " data-mi-attitle="title_alt" data-mi-atalt="title_alt" class="img-poster"/></a><img src="/static/img/shd-small.png" alt=""/>
   <div class="rel zmin num"><i data-mi-name="ratings.cons.0"></i></div>
   <div class="caption-def">
     <div class="name-film"><a href="/films/NA/" title="" data-mi-athref="id"><span data-mi-name="name"></span> (<i data-mi-name="releasedate" data-mi-id="releasedate" data-mi-val=""></i>)</a></div>
