--- a/interface/static/tpl/feed-thumb.html
+++ b/interface/static/tpl/feed-thumb.html
@@ -7,7 +7,7 @@
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
           <div class="row">
-            <div class="col-md-10 col-sm-9 col-xs-9"><a href="/users/undefined/" title="" data-mi-name="user.name" data-mi-athref="user.id"></a>&nbsp;оставил комментарий к фильму</div>
+            <div class="col-md-10 col-sm-9 col-xs-9"><a href="/users/undefined/" title="" data-mi-name="user.name" data-mi-athref="user.id">Пользователь</a>&nbsp;оставил комментарий к фильму</div>
             <div class="col-md-2 col-sm-3 col-xs-3">
               <div data-mi-id="created" data-mi-name="created" class="time-tape">NaN undefined NaN</div>
             </div>
@@ -30,7 +30,7 @@
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
           <div class="row">
-            <div class="col-md-10 col-sm-9 col-xs-9"><a href="/users/undefined/" title="" data-mi-name="user.name" data-mi-athref="user.id"></a>&nbsp;оценил фильм</div>
+            <div class="col-md-10 col-sm-9 col-xs-9"><a href="/users/undefined/" title="" data-mi-name="user.name" data-mi-athref="user.id">Пользователь</a>&nbsp;оценил фильм</div>
             <div class="col-md-2 col-sm-3 col-xs-3">
               <div data-mi-id="created" data-mi-name="created" class="time-tape">NaN undefined NaN</div>
             </div>
@@ -55,7 +55,7 @@
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
           <div class="row">
-            <div class="col-md-10 col-sm-9 col-xs-9"><a href="/users/undefined/" title="" data-mi-name="user.name" data-mi-athref="user.id"></a>&nbsp;подписался на обновления актера</div>
+            <div class="col-md-10 col-sm-9 col-xs-9"><a href="/users/undefined/" title="" data-mi-name="user.name" data-mi-athref="user.id">Пользователь</a>&nbsp;подписался на обновления актера</div>
             <div class="col-md-2 col-sm-3 col-xs-3">
               <div data-mi-id="created" data-mi-name="created" class="time-tape">NaN undefined NaN</div>
             </div>
@@ -78,7 +78,7 @@
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
           <div class="row">
-            <div class="col-md-10 col-sm-9 col-xs-9"><a href="/users/undefined/" title="" data-mi-name="user.name" data-mi-athref="user.id"></a>&nbsp;подписался на фильм</div>
+            <div class="col-md-10 col-sm-9 col-xs-9"><a href="/users/undefined/" title="" data-mi-name="user.name" data-mi-athref="user.id">Пользователь</a>&nbsp;подписался на фильм</div>
             <div class="col-md-2 col-sm-3 col-xs-3">
               <div data-mi-id="created" data-mi-name="created" class="time-tape">NaN undefined NaN</div>
             </div>
@@ -105,7 +105,7 @@
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
           <div class="row">
-            <div class="col-md-10 col-sm-9 col-xs-9"><a href="/users/undefined/" title="" data-mi-name="user.name" data-mi-athref="user.id"></a>&nbsp;теперь дружит с</div>
+            <div class="col-md-10 col-sm-9 col-xs-9"><a href="/users/undefined/" title="" data-mi-name="user.name" data-mi-athref="user.id">Пользователь</a>&nbsp;теперь дружит с</div>
             <div class="col-md-2 col-sm-3 col-xs-3">
               <div data-mi-id="created" data-mi-name="created" class="time-tape">NaN undefined NaN</div>
             </div>
@@ -128,7 +128,7 @@
       <div class="col-md-11 col-sm-10 col-xs-10">
         <div class="title-item-tape cf">
           <div class="row">
-            <div class="col-md-10 col-sm-9 col-xs-9"><a href="/users/undefined/" title="" data-mi-name="user.name" data-mi-athref="user.id"></a>&nbsp;не будет смотреть фильм</div>
+            <div class="col-md-10 col-sm-9 col-xs-9"><a href="/users/undefined/" title="" data-mi-name="user.name" data-mi-athref="user.id">Пользователь</a>&nbsp;не будет смотреть фильм</div>
             <div class="col-md-2 col-sm-3 col-xs-3">
               <div data-mi-id="created" data-mi-name="created" class="time-tape">NaN undefined NaN</div>
             </div>
