--- a/interface/static/tpl/film-thumb.html
+++ b/interface/static/tpl/film-thumb.html
@@ -6,6 +6,6 @@
       <div data-mi-id="relation.rating" data-mi-val='0' data-rateit-step='1' data-rateit-max='10' data-rateit-resetable='1' data-rateit-value='0' class="rateit"></div>
     </div>
     <div data-mi-id="btn" class="btn-def block margin0a btn-subscribe"><a title="" data-mi-id="btn_text" data-mi-athref="id">Подписаться</a><a href="/films/NA/" title="Добавить в плейлист" data-mi-id="relation.playlist" data-mi-onclick="toggle_playlist" data-mi-val='0' class="btn-add ab"></a></div>
-    <p data-mi-id="btn_price" class="display-none">или<br/><a title="" data-mi-athref="id"><span data-mi-id="price">от false р. без рекламы</span></a></p>
+    <p data-mi-id="btn_price" class="display-none">или<br/><a title="" data-mi-athref="id"><span data-mi-id="price"> false р. без рекламы</span></a></p>
   </div>
 </div>
