--- a/interface/static/tpl/comment-thumb.html
+++ b/interface/static/tpl/comment-thumb.html
@@ -1,4 +1,4 @@
-<div data-mi-id="id" data-mi-val="na" class="tape-item cf">
+<div data-mi-id="id" data-mi-val="na" class="tape-item cf comment-thumb">
   <div class="row">
     <div class="col-md-1 col-sm-2 col-xs-2">
       <div class="tape-img"><a href="/users/undefined" title=""><img src="/static/img/noavatar.png" alt="" data-mi-atsrc="user.avatar" data-mi-default="/static/img/noavatar.png" class="img-circle"/></a></div>
@@ -7,7 +7,7 @@
       <div class="play-comments">
         <div class="title-item-tape cf">
           <div class="row">
-            <div class="col-md-9 col-sm-9 col-xs-9"><a href="/users/undefined" title="" data-mi-athref="user.id" data-mi-name="user.name"></a></div>
+            <div class="col-md-9 col-sm-9 col-xs-9"><a href="/users/undefined" title="" data-mi-athref="user.id" data-mi-name="user.name">Пользователь #undefined</a></div>
             <div class="col-md-3 col-sm-3 col-xs-3">
               <div data-mi-id="created" data-mi-name="created" class="time-tape">NaN undefined NaN</div>
             </div>
